2009-03-17  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbstowcs_r.c (_mbstowcs_r): Handle NULL destination
	string correctly.

2009-03-16  Mark Mitchell  <mark@codesourcery.com>

	* libc/machine/arm/strlen.c (strlen): Fix defect in Thumb-2 mode.

2009-03-16  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/arm/strlen.c (strlen): Correctly detect
	end-of-string.
	* libc/machine/arm/strcpy.c (strcpy): Likewise.
	* libc/machine/arm/strcmp.c (strcmp, strcmp_unaligned): Likewise.

2009-03-15  Yaakov Selkowitz <yselkowitz@users.sourceforge.net>

	* libc/include/sys/errno.h (ESTRPIPE): Define.
	* libc/string/strerror.c (strerror): Decode it.

2009-03-15  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/wchar.h (wcsdup, _wcsdup_r): Declare.
	* libc/string/Makefile.am: Add wcsdup.c.
	* libc/string/Makefile.in: Regenerate.
	* libc/string/strings.tex: Add wcsdup documentation reference.
	* libc/string/wcsdup.c: New file.

2009-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/stdlib.h (_mkstemp_r, _mktemp_r): Move out of
	!_REENT_ONLY section.

2009-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/stdio.h (_mkstemp_r, _mktemp_r): Move declarations
	to stdlib.h.
	* libc/include/stdlib.h (mktemp, _mktemp_r): Warn when using.
	* libc/stdio/mktemp.c: Explain the security risk when using
	mktemp.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/time/time.tex (wcsftime.def):  Include.
	* libc/time/wcsftime.c:  Clean up documentation a little.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/stdio/swscanf.c:  Some documentation corrections.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/stdio/swprintf.c (_swprintf_r, swprintf):
	correct how terminating L'\0' is added;
	change return to match standard for when output does not fit;
	some corrections and enhancements to the docs.
	* libc/stdio/vswprintf.c (_vswprintf_r):  ditto, except for docs.